# VelCtrl

./: .gitignore  CMakeLists.txt  compile.sh  flair_compile_all.sh
simulator/: CMakeLists.txt
simulator/resources/core2-64/: run.flair  simulator_x4.sh  simulator_x8.sh
uav/: CMakeLists.txt
uav/resources/armv5te/: CircleFollower_minidrones.sh
uav/resources/armv7a-neon/: CircleFollower_ardrone2.sh  CircleFollower_bebop.sh  CircleFollower_hdsx8.sh
uav/resources/core2-64/: x4.sh  x4_intelaero.sh  x8.sh
uav/src/: RobustVelCtrl.cpp  RobustVelCtrl.h  TestRobustVelCtrl.cpp  VelCtrl.cpp  VelCtrl.h  main.cpp  test_eigen.cpp  test_robustvelctrl.cpp
